--- a/mta.yaml
+++ b/mta.yaml
@@ -6,7 +6,7 @@ parameters:
   hcp-deployer-version: "1.0.0"
 
 modules:
-  - name: "productsmta"
+  - name: "productsmta1"
     type: com.sap.hcp.html5
     path: .
     parameters:
