--- a/mta.yaml
+++ b/mta.yaml
@@ -1,9 +1,9 @@
 _schema-version: "2.0.0"
-ID: "Products.mta.rm"
+ID: "com.mycompany.northwind"
 version: 0.1.0
 
 parameters:
-  hcp-deployer-version: "1.0.0"
+  hcp-deployer-version: "1.2.0"
 
 modules:
   - name: "productsmta1"
