--- a/mta.yaml
+++ b/mta.yaml
@@ -1,13 +1,13 @@
-_schema-version: "2.0.0"
-ID: "com.mycompany.northwind"
-version: 0.1.0
+_schema-version: '2.0'
+ID: com.mycompany.northwind
+version: 0.1.5
 
 modules:
-  - name: productsmta1
+  - name: productsmta1-test
     type: com.sap.hcp.html5
     path: .
     parameters:
-       version: 0.1.0-${timestamp}
+        version: 0.1.0-${timestamp}
     build-parameters:
-      builder: grunt
-      build-result: dist
+        builder: grunt
+        build-result: dist
