--- a/mta.yaml
+++ b/mta.yaml
@@ -4,10 +4,10 @@ version: 0.1.5
 
 modules:
 - name: productsmta1-test
-  type: com.sap.hcp.html5
+  type: html5
   path: .
   parameters:
    version: 0.1.0-${timestamp}
-   build-parameters:
-    builder: grunt
-    build-result: dist
+  build-parameters:
+   builder: grunt
+   build-result: dist
